[package]
name = "torshare-tracker"
description = "A BitTorrent tracker written in Rust"
license-file.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[workspace.package]
license-file = "LICENSE"
edition = "2021"
version = "0.1.0"
authors = ["Aayush Agrawal"]
repository = "https://github.com/torshare/torshare-tracker"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "0.2"
config = "0.13"
serde_urlencoded = "0.7"
percent-encoding = "2.3"
tokio = { version = "1", features = ["full"] }
bip_bencode = "0.4"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
lazy_static = "1.4"
futures = "0.3"
bytes = { version = "1", features = ["serde"] }

[workspace]
members = [
    "libs/utils",
    "libs/config",
]

[profile.dev]
debug = 1
opt-level = 1
lto = "thin"

[profile.release]
debug = 1
opt-level = 3
lto = "fat"