[package]
name = "ts-tracker"
description = "A BitTorrent tracker written in Rust"
license-file.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[workspace.package]
license-file = "LICENSE"
edition = "2021"
version = "0.1.0"
authors = ["Aayush Agrawal"]
repository = "https://github.com/torshare/torshare-tracker"

[dependencies]
ts-utils = { path = "libs/utils" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.13"
tokio = { version = "1", features = ["full"] }
log = "0.4"
lazy_static = "1.4"
futures = "0.3"
bytes = { version = "1", features = ["serde"] }
env_logger = "0.10"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
ahash = "0.8"
async-trait = "0.1"
redis = { version = "0.23", features = ["ahash", "tokio-comp"], optional = true }
socket2 = { version = "0.5.3", features = ["all"] }
indexmap = { version = "2", features = ["serde"] }
pin-project-lite = "0.2"
mimalloc = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]

[workspace]
members = [
    "libs/utils"
]

[profile.release]
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release-debug"

[profile.release-debug]
inherits = "release"
debug = true
lto = "thin"

[features]
default = ["redis-store", "memalloc"]
redis-store = ["redis"]
memalloc = ["mimalloc"]
