[package]
name = "ts-utils"
license-file.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
percent-encoding = "2"
itoa = "1"
bytes = "1"
ahash = "0.8"
coarsetime = "0.1"

[dev-dependencies]
serde_test = "1"